--- a/index.html
+++ b/index.html
@@ -1,74 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>새뱃돈 계산기</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div>
-        <p class="header">새뱃돈 계산기</p>
+      <p class="header">세뱃돈 계산기</p>
     </div>
     <div class="container">
-        <div class="calculator">
-            <form>
-                <div class="display">
-                    <input type="text" name="display" id="display" value="0">
-                </div>
+      <div class="calculator">
+        <form>
+          <div class="display">
+            <input type="text" name="display" id="display" value="0" />
+          </div>
 
-                <div>
-                    <input type="button" value="AC" onclick="display.value = '' " class="operator">
-                    <input type="button" value="C" onclick="display.value = display.value.toString().slice(0, -1)" class="operator">
-                    <input type="button" value="." onclick="display.value += '.' " class="operator">
-                    <input type="button" value="/" onclick="display.value += '/' " class="operator">
-                </div>
+          <div>
+            <input
+              type="button"
+              value="AC"
+              onclick="clearDisplay()"
+              class="operator"
+            />
+            <input
+              type="button"
+              value="C"
+              onclick="deleteLast()"
+              class="operator"
+            />
+            <input
+              type="button"
+              value="."
+              onclick="appendDecimal()"
+              class="operator"
+            />
+            <input type="button" value="/" onclick="appendOperator('/')" />
+          </div>
 
-                <div>
-                    <input type="button" value="7" onclick="display.value += '7' ">
-                    <input type="button" value="8" onclick="display.value += '8' ">
-                    <input type="button" value="9" onclick="display.value += '9' ">
-                    <input type="button" value="*" onclick="display.value += '*' " class="operator">
-                </div>
+          <!-- 계산기 버튼 -->
+          <div>
+            <input type="button" value="7" onclick="appendToDisplay('7')" />
+            <input type="button" value="8" onclick="appendToDisplay('8')" />
+            <input type="button" value="9" onclick="appendToDisplay('9')" />
+            <input type="button" value="*" onclick="appendOperator('*')" />
+          </div>
 
-                <div>
-                    <input type="button" value="4" onclick="display.value += '4' ">
-                    <input type="button" value="5" onclick="display.value += '5' ">
-                    <input type="button" value="6" onclick="display.value += '6' ">
-                    <input type="button" value="-" onclick="display.value += '-' " class="operator">
-                </div>
+          <div>
+            <input type="button" value="4" onclick="appendToDisplay('4')" />
+            <input type="button" value="5" onclick="appendToDisplay('5')" />
+            <input type="button" value="6" onclick="appendToDisplay('6')" />
+            <input type="button" value="-" onclick="appendOperator('-')" />
+          </div>
 
-                <div>
-                    <input type="button" value="1" onclick="display.value += '1' ">
-                    <input type="button" value="2" onclick="display.value += '2' ">
-                    <input type="button" value="3" onclick="display.value += '3' ">
-                    <input type="button" value="+" onclick="display.value += '+' " class="operator">
-                </div>
+          <div>
+            <input type="button" value="1" onclick="appendToDisplay('1')" />
+            <input type="button" value="2" onclick="appendToDisplay('2')" />
+            <input type="button" value="3" onclick="appendToDisplay('3')" />
+            <input type="button" value="+" onclick="appendOperator('+')" />
+          </div>
 
-                <div>
-                    <input type="button" value="00" onclick="display.value += '00' ">
-                    <input type="button" value="0" onclick="display.value += '0' ">
-                    <input type="button" value="=" onclick="display.value = eval(display.value)" class="equal operator">
-                </div>
-
-
-            </form>
-        </div>
-
+          <div>
+            <input type="button" value="00" onclick="appendToDisplay('00')" />
+            <input type="button" value="0" onclick="appendToDisplay('0')" />
+            <input
+              type="button"
+              value="="
+              onclick="calculate()"
+              class="equal operator"
+            />
+          </div>
+        </form>
+      </div>
     </div>
+
     <div class="history-area">
-        <div class="history" id="history"></div>
+      <div class="history" id="history"></div>
     </div>
+  </body>
 
-    <script>
-        function boxHistory() {
-            
-        }
-    </script>
-
-
-</body>
+  <script src="script.js"></script>
 </html>
-
-
-<!--  -->
